提取配置文件到配置中心

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,4 @@
-Spring:
-  application:
-    name: itoken-client
-  boot:
-    admin:
-      client:
-        url: http://localhost:8084
+spring:
   cloud:
     config:
       uri: http://localhost:8888
